--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,13 +1,8 @@
 <p-toolbar>
   <div class="p-toolbar-group-start">
-    <h2>Expense Tracker</h2>
+    <h1 class="px-2">Expense Tracker</h1>
   </div>
   <div class="p-toolbar-group-end">
-    <p-avatar
-      icon="pi pi-user"
-      styleClass="mr-2"
-      size="large"
-      shape="circle"
-    ></p-avatar>
+    <p-avatar icon="pi pi-user" styleClass="mr-2" size="large" shape="circle"></p-avatar>
   </div>
 </p-toolbar>
