--- a/src/app/components/transactions/transaction-item/transaction-item.component.html
+++ b/src/app/components/transactions/transaction-item/transaction-item.component.html
@@ -1,5 +1,4 @@
-<div
-  class="flex flex-column md:flex-row md:align-items-center md:justify-content-between mb-4">
+<div class="flex flex-column md:flex-row md:align-items-center md:justify-content-between mb-4">
   <div class="flex">
     <p-avatar
       [icon]="$any(transaction.category.icon)"
@@ -7,9 +6,7 @@
       size="large"
       shape="circle"></p-avatar>
     <div class="mr-0 md:mr-8">
-      <span class="block text-900 font-medium mb-1">{{
-        transaction.name
-      }}</span>
+      <span class="block text-900 font-medium mb-1">{{ transaction.name }}</span>
       <div class="text-600">
         {{ transaction.date | date : 'fullDate' }}
       </div>
@@ -19,9 +16,7 @@
   <div class="mt-2 md:mt-0 flex align-items-center gap-2">
     <span
       class="font-semibold mr-4"
-      [ngClass]="
-        transaction.type === 'income' ? 'text-green-600' : 'text-red-600'
-      "
+      [ngClass]="transaction.type === 'income' ? 'text-green-600' : 'text-red-600'"
       >{{ transaction.amount | currency }}</span
     >
     <p-button
@@ -29,6 +24,6 @@
       [text]="true"
       severity="secondary"
       (onClick)="menu.toggle($event)"></p-button>
-    <p-menu #menu [model]="items" [popup]="true"></p-menu>
+    <p-menu #menu [model]="items" [popup]="true" appendTo="body"></p-menu>
   </div>
 </div>
