--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -2,32 +2,46 @@
   <ng-template pTemplate="header">
     <div class="px-4">
       <div class="flex justify-content-between align-items-center">
-        <h3>Transactions</h3>
+        <h2>Transactions</h2>
         <p-button
           label="Add Transaction"
           icon="pi pi-plus"
-          class="p-button-success"
+          class="p-button-success ml-2"
           (onClick)="addTransaction()"></p-button>
       </div>
-      <p-dropdown
-        [options]="(categoryService.getCategories() | async)!"
-        [(ngModel)]="selectedCategory"
-        [showClear]="true"
-        optionLabel="name"
-        placeholder="Select a Category"
-        (onChange)="filterTransactionsByCategory()"></p-dropdown>
+      <div class="flex justify-content-between align-items-center">
+        <div>
+          <p-iconField iconPosition="left" class="ml-auto">
+            <p-inputIcon>
+              <i class="pi pi-search"></i>
+            </p-inputIcon>
+            <input
+              pInputText
+              [(ngModel)]="searchTerm"
+              placeholder="Search..."
+              (input)="filterTransactionsBySearchTerm()" />
+          </p-iconField>
+        </div>
+        <p-dropdown
+          [options]="categories"
+          [(ngModel)]="selectedCategory"
+          [showClear]="true"
+          optionLabel="name"
+          placeholder="Select a Category"
+          (onChange)="filterTransactionsByCategory()"></p-dropdown>
+      </div>
     </div>
   </ng-template>
-
   <ng-template pTemplate="content">
-    <p-dataView #dv [value]="filteredTransactions" [rows]="10" [paginator]="true">
+    <p-dataView [value]="filteredTransactions" [rows]="10" [paginator]="true">
       <ng-template pTemplate="list" let-filteredTransactions>
-        <div *ngFor="let transaction of filteredTransactions; let first = first">
-          <app-transaction-item
-            [transaction]="transaction"
-            (editTransaction)="editTransaction($event)"
-            (deleteTransaction)="removeTransaction($event)" />
-        </div>
+        @for (transaction of filteredTransactions; track $index) {
+        <app-transaction-item
+          [transaction]="transaction"
+          (editTransaction)="editTransaction($event)"
+          (deleteTransaction)="removeTransaction($event)" />
+
+        }
       </ng-template>
     </p-dataView>
   </ng-template>
