--- a/src/app/components/transactions/transaction-form/transaction-form.component.html
+++ b/src/app/components/transactions/transaction-form/transaction-form.component.html
@@ -1,7 +1,4 @@
-<form
-  [formGroup]="transactionForm"
-  (ngSubmit)="onSubmit()"
-  class="formgrid grid">
+<form [formGroup]="transactionForm" (ngSubmit)="onSubmit()" class="formgrid grid">
   <div class="field flex justify-content-center w-full">
     <p-selectButton
       [options]="transactionTypes"
@@ -17,13 +14,11 @@
 
   <div class="field col-12 p-fluid">
     <label for="category">Category</label>
-    @if (categoryService.getCategories() | async; as categories) {
     <p-dropdown
       [options]="categories"
       formControlName="category"
       optionLabel="name"
       placeholder="Select a Category"></p-dropdown>
-    }
   </div>
 
   <div class="field col-12 p-fluid">
