--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -4,7 +4,7 @@
   >
   <ng-template pTemplate="content">
     <div class="flex justify-content-center">
-      @if (!isDataEmpty) {
+      @if (data$ | async; as data) {
       <p-chart type="doughnut" [data]="data"></p-chart>
       } @else {
       <div>No data available</div>
