feat: update component headers with icons for better visual representation

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,6 +1,9 @@
 <p-card>
   <ng-template pTemplate="header"
-    ><div class="px-4"><h2>Expense Statistics</h2></div></ng-template
+    ><div class="flex align-items-center gap-2 px-4">
+      <i class="pi pi-chart-pie" style="font-size: 2rem"></i>
+      <h2>Expense Statistics</h2>
+    </div></ng-template
   >
   <ng-template pTemplate="content">
     <div class="flex justify-content-center">
