--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,9 @@
 <p-toolbar>
   <div class="p-toolbar-group-start">
-    <h1 class="px-2">Expense Tracker</h1>
+    <div class="flex align-items-center gap-2 px-2">
+      <i class="pi pi-money-bill" style="font-size: 2.5rem"></i>
+      <h1>Expense Tracker</h1>
+    </div>
   </div>
   <div class="p-toolbar-group-end">
     <p-avatar icon="pi pi-user" styleClass="mr-2" size="large" shape="circle"></p-avatar>
