--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -2,7 +2,10 @@
   <ng-template pTemplate="header">
     <div class="px-4">
       <div class="flex justify-content-between align-items-center">
-        <h2>Transactions</h2>
+        <div class="flex align-items-center gap-2">
+          <i class="pi pi-list" style="font-size: 2rem"></i>
+          <h2>Transactions</h2>
+        </div>
         <p-button
           label="Add Transaction"
           icon="pi pi-plus"
