--- a/src/app/components/balance/balance.component.html
+++ b/src/app/components/balance/balance.component.html
@@ -1,6 +1,9 @@
 <p-card>
   <ng-template pTemplate="header"
-    ><div class="px-4"><h2>Current Balance</h2></div></ng-template
+    ><div class="flex align-items-center gap-2 px-4">
+      <i class="pi pi-wallet" style="font-size: 2rem"></i>
+      <h2>Current Balance</h2>
+    </div></ng-template
   >
 
   <ng-template pTemplate="content">
