chore: Update add transaction button label

--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -7,7 +7,7 @@
           <h2>Transactions</h2>
         </div>
         <p-button
-          label="Add Transaction"
+          label="Add"
           icon="pi pi-plus"
           class="p-button-success ml-2"
           (onClick)="addTransaction()"></p-button>
